# toolbox-py

./: .buildinfo  MANIFEST.in  README.md  dataclass.html  decode.html  dict.html  encode.html  genindex.html  index.html  json.html  list.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  string.html
.doctrees/: dataclass.doctree  decode.doctree  dict.doctree  encode.doctree  environment.pickle  index.doctree  json.doctree  list.doctree  string.doctree
.github/: copilot-instructions.md
.github/workflows/: docs.yml
_sources/: decode.rst.txt  encode.rst.txt  json.rst.txt  list.rst.txt  string.rst.txt
docs/: conf.py  dataclass.rst  dict.rst  index.rst
tests/: test_dict.py  test_list.py  test_string.py
toolbox/: __init__.py  dataclass.py  decode.py  dict.py  encode.py  json.py  list.py  string.py
