[project]
name = "toolbox"
version = "0.1.0"
description = "Bunch of utilites in Python"
authors = [
    {name = "Alireza Rabie",email = "alireza@aazerra.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
