[project]
name = "toolbox-py"
version = "0.1.0"
description = "A collection of Python utilities for common programming tasks"
authors = [
    {name = "Alireza Rabie", email = "alireza@aazerra.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["utilities", "tools", "string", "dict", "list", "encoding", "json"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/Aazerra/toolbox-py"
Repository = "https://github.com/Aazerra/toolbox-py"
Documentation = "https://github.com/Aazerra/toolbox-py"
"Bug Reports" = "https://github.com/Aazerra/toolbox-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "sphinx>=8.2.3"
]

[tool.hatch.build.targets.wheel]
packages = ["toolbox"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
