[project]
name = "toolbox-py"
version = "0.1.0"
description = "A collection of useful Python utilities for dict, list, string manipulation, encoding, and data serialization"
authors = [{ name = "Alireza Rabie", email = "alireza@aazerra.dev" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "utilities",
    "tools",
    "dict",
    "list",
    "string",
    "serialization",
    "encoding",
    "helpers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/aazerra/toolbox-py"
Repository = "https://github.com/aazerra/toolbox-py"
Documentation = "https://aazerra.github.io/toolbox-py/"
Issues = "https://github.com/aazerra/toolbox-py/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "black>=24.0.0,<25",
    "isort>=5.12.0,<6",
    "mypy>=1.0.0,<2",
    "sphinx>=8.2.3,<9",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
